--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,9 +18,9 @@ phases:
       - aws configure set region $Region
       - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID_PARAM
       - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY_PARAM
-      - cd Dotnetlambda4
+      - cd Dotnetlambda
       - cd src
-      - cd Dotnetlambda4
+      - cd Dotnetlambda
       - dotnet clean 
       - dotnet restore
   build:
